tests/workflow/negative/no-initial.s
// There is no initial state
@a
go1() { transitionTo(@terminal) }

